kustomizations/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: unique-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unique-api
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: unique-api
    spec:
      serviceAccountName: unique-api
      containers:
        - name: unique-api
          image: registry.uniproject.jp/infra/unique-api:1.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 64Mi # 必要最低限の64MiBを確保
            limits:
              cpu: 1000m # 最大1CPUまで使用可能
              memory: 128Mi # 最大128MiBまで使用可能
      imagePullSecrets:
        - name: internal-harbor
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: unique-api
spec:
  selector:
    app: unique-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
