kustomizations/base/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-server
  labels:
    app: unique-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unique-front
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: unique-front
    spec:
      serviceAccountName: unique-front
      containers:
        - name: unique-front
          image: registry.uniproject.jp/infra/unique-front:1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 512Mi # 必要最低限の1GiBを確保
            limits:
              cpu: 1000m # 最大1CPUまで使用可能
              memory: 1Gi # 最大2GiBまで使用可能
          readinessProbe:
            httpGet:
              path: /signin
              port: 3000
          volumeMounts:
            - name: front-keys
              mountPath: /app/keys
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: internal-harbor
      volumes:
        - name: front-keys
          persistentVolumeClaim:
            claimName: front-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: unique-front
spec:
  selector:
    app: unique-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
