kustomizations/base/mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
  labels:
    app: unique-mail
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: unique-mail
  template:
    metadata:
      labels:
        app: unique-mail
    spec:
      serviceAccountName: unique-mail
      containers:
        - name: unique-mail
          image: registry.uniproject.jp/infra/unique-mail:1.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
      imagePullSecrets:
        - name: internal-harbor
---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
  labels:
    app: unique-mail
spec:
  selector:
    app: unique-mail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
