kustomizations/base/internal-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unique-auth-access
  namespace: unique
spec:
  endpointSelector:
    matchLabels:
      app: unique-auth

  ingress:
    # unique-front -> unique-auth
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: unique
            io.cilium.k8s.policy.serviceaccount: unique-front
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - path: "^/internal/authentication$"
              - path: "^/internal/auth-requests/.*$"
              - path: "^/internal/consents$"
              - path: "^/internal/consents/.*$"
              - path: "^/internal/device-auth-requests/.*$"
              - path: "^/internal/password_reset/.*$"
              - path: "^/internal/session_verify$"
              - path: "^/internal/sessions$"
              - path: "^/internal/sessions/.*$"
              - path: "^/internal/totp/.*$"

    # unique-api -> password_hash
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: unique
            io.cilium.k8s.policy.serviceaccount: unique-api
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: POST
                path: "^/internal/password_hash$"

    # unique-api -> verify endpoints
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: unique
            io.cilium.k8s.policy.serviceaccount: unique-api
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "^/internal/session_verify$"
              - method: GET
                path: "^/internal/token_verify$"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unique-api-access
  namespace: unique
spec:
  endpointSelector:
    matchLabels:
      app: unique-api

  ingress:
    # unique-front
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: unique
            io.cilium.k8s.policy.serviceaccount: unique-front
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - path: "^/internal/users$"
              - path: "^/internal/users/.*$"

    # unique-discord
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: unique
            io.cilium.k8s.policy.serviceaccount: unique-discord
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "^/internal/users/external_identities/search$"
              - method: GET
                path: "^/internal/users/.*$"
